<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:background="@color/app_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_current_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <EditText
            android:id="@+id/editText_current_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_current_name"
            android:inputType="text"
            android:maxLength="255"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_new_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <EditText
            android:id="@+id/editText_new_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_new_name"
            android:inputType="text"
            android:maxLength="255"
            android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp">

        <com.andexert.library.RippleView
            android:id="@+id/ripple1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rv_rippleDuration="200"
            app:rv_type="rectangle">

            <Button
                android:id="@+id/btnChangeNameProceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shadow"
                android:text="@string/submit_profile"
                android:textColor="@color/white" />
        </com.andexert.library.RippleView>


    </LinearLayout>

    <TextView
        android:id="@+id/textView_update_your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/update_your_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>