<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:background="#fff"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">


    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/onspot" />

    <EditText
        android:id="@+id/OtPmobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/enter_verification_key"
        android:inputType="textCapCharacters"
        android:maxLength="10"
        android:singleLine="true"
        android:textAllCaps="true"></EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp">

        <com.andexert.library.RippleView
            android:id="@+id/ripple1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rv_rippleDuration="200"
            app:rv_type="rectangle">

            <Button
                android:id="@+id/btnOTPVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shadow"
                android:onClick="onbtnOTPVerify"
                android:text="@string/submit_verify_otp"
                android:textColor="@color/white" />
        </com.andexert.library.RippleView>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_update_your_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_verification_key_for_change_mobile_number"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>