<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:background="@color/app_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_etOldNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:hint="@string/hint_current_mobile_number">

        <EditText
            android:id="@+id/etOldNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="number"
            android:maxLength="10"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_etNewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:hint="New Mobile Number">

        <EditText
            android:id="@+id/etNewNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="number"
            android:maxLength="10"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp">

        <com.andexert.library.RippleView
            android:id="@+id/ripple1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rv_rippleDuration="200"
            app:rv_type="rectangle">

            <Button
                android:id="@+id/btnChangeNumberProceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shadow"
                android:text="@string/submit_profile"
                android:textColor="@color/white" />
        </com.andexert.library.RippleView>


    </LinearLayout>

    <TextView
        android:id="@+id/textView_update_your_mobile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/update_your_mobile_number"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>