<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_signup"
    android:orientation="vertical"
    android:theme="@style/MyEditTextTheme">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_jago_grahak_jago"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="0dp"
            android:src="@drawable/en_jago_grahak_jago"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/etNewUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="text"
                android:maxLength="25"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/MyEditTextTheme">

            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_useremail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/etNewUserEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:maxLength="255"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/MyEditTextTheme"></EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_usernumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/etNewUserNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/MyEditTextTheme"></EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/countrySpinner"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_dropdown_white"
            android:textSize="30sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView_select_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/choose_language_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/radioButton_english"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/log_colorPrimaryDark"
                android:checked="true"
                android:text="English"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radioButton_hindi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/log_colorPrimaryDark"
                android:text="हिंदी"
                android:textColor="@color/black" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium">

            <com.andexert.library.RippleView
                android:id="@+id/ripple1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rv_rippleDuration="200"
                app:rv_type="rectangle">

                <Button
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shadow_black"
                    android:padding="12dp"
                    android:text="@string/sign_up_button_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />
            </com.andexert.library.RippleView>

            <com.andexert.library.RippleView
                android:id="@+id/ripple2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                app:rv_rippleDuration="200"
                app:rv_type="rectangle">

                <Button
                    android:id="@+id/signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shadow_black"
                    android:padding="12dp"
                    android:text="@string/sign_in_button_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />
            </com.andexert.library.RippleView>
        </LinearLayout>

        <TextView
            android:id="@+id/textView_update_your_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_up_bottom_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>